added notes to control the proces of building the linux

--- a/fw/linux/Makefile
+++ b/fw/linux/Makefile
@@ -18,12 +18,17 @@
 #
 # petalinux-package --wic
 #
+# Creating an app which is automatically enabled
+# petalinux-create -t apps --template install --name McoiCore --enable
+#
 # Enclustra BSP for our XU5 module are here:
 # https://github.com/enclustra/Mercury_XU5_PE1_Reference_Design/releases/tag/2022.1_v1.2.1
 #
 # IMPORTANT: to build the docker image you need to have petalinux-*-installer.run
 # in the current directory
 #
+# LINKS:
+# https://support.xilinx.com/s/article/1141772?language=en_US
 
 IMAGE_NAME:=petalinux_tools
 DOCKER_BUILD_PATH:=/home/petalinux/build
