automation of the petalinux build process

--- a/fw/linux/Makefile
+++ b/fw/linux/Makefile
@@ -1,35 +1,6 @@
 # Commands to run the compilation in interactive mode
 # docker run --rm -it -e 'TERM=xterm-256color' -v .:/home/petalinux/build petalinux_tools
 #
-# Petalinux commands:
-# petalinux-create -t <target> -s <script>
-# or
-# petalinux-create -t project --template zynqmp --name McoiCore
-# petalinux-config -get-hw-description=<path_to_xsa>
-#
-# petalinux-build
-#
-# This opens a configuration menu
-# petalinux-config
-# NOTE: If you want test your build in QEMU use the initramfs filesystem
-#
-# copies binaries to the pre-built folder
-# petalinux-package --prebuilt
-#
-# Petalinux Qemu simulations:
-# petalinux-boot --qemu --prebuilt 3
-#
-# For SD card we have to create BOOT.BIN file and then wic file
-# petalinux-package --boot --format BIN --fsbl images/linux/zynqmp_fsbl.elf \
-  --u-boot images/linux/u-boot.elf --pmufw images/linux/pmu_rom_qemu_sha3.elf --force
-#
-# If you want to simulate sd card you need to define the structure of the
-# memory using the wic file
-# petalinux-package --wic
-#
-# Creating an app which is automatically enabled
-# petalinux-create -t apps --template install --name McoiCore --enable
-#
 # Enclustra BSP for our XU5 module are here:
 # https://github.com/enclustra/Mercury_XU5_PE1_Reference_Design/releases/tag/2022.1_v1.2.1
 #
@@ -44,6 +15,14 @@ DOCKER_BUILD_PATH:=/home/petalinux/build
 SCRIPT:=compile.sh
 PETALINUX_INSTALLER:=$(wildcard ./petalinux-*-installer.run)
 PETALINUX_ENV_SETUP_SH:=plnx-env-setup.sh
+XSA_FILE:=../../syn/exported_hw.xsa
+
+all: build
+	@cp $(XSA_FILE) .
+	@docker run --rm -e 'TERM=xterm-256color' \
+		-v .:$(DOCKER_BUILD_PATH) \
+		petalinux_tools:latest \
+		$(SCRIPT)
 
 build: $(PETALINUX_INSTALLER) $(PETALINUX_ENV_SETUP_SH)
 	@if [ -z "$(shell docker images -q $(IMAGE_NAME):latest 2> /dev/null)" ]; then \
@@ -52,10 +31,4 @@ build: $(PETALINUX_INSTALLER) $(PETALINUX_ENV_SETUP_SH)
 		else \
 		echo "Image already exists"; \
 		fi
-
-# all: build
-# 	docker run --rm -e 'TERM=xterm-256color' \
-# 		-v .:$(DOCKER_BUILD_PATH) \
-# 		petalinux_tools:latest \
-# 		$(SCRIPT)
 
