updated jtag configuration having now systemd service to start pll

--- a/fw/linux/petalinux_jtag_spec/meta-user/conf/petalinuxbsp.conf
+++ b/fw/linux/petalinux_jtag_spec/meta-user/conf/petalinuxbsp.conf
@@ -1,4 +1,9 @@
 #User Configuration
+IMAGE_INSTALL:append = " \
+    python3 \
+    python3-smbus \
+    python3-pip \
+    "
 
 #OE_TERMINAL = "tmux"
 
